examples/test/testpolicy4867.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4867
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key21: value25
      key7: value39
      key46: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value45
      podSelector:
        matchLabels:
          key2: value4
          key9: value15
